Work in progress
* config generator
* use INI config files, so that all txt/json's from original game
  are removed
* tweaked colors a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,9 +55,8 @@ if(MSVC)
     )
 endif()
 
-file(GLOB SRC_FILES d2mapapi/*.cpp d2mapapi/*.h)
-add_library(d2mapapi STATIC ${SRC_FILES})
-file(GLOB TEST_SRC_FILES src/*.cpp src/*.h)
-add_executable(D2RMH ${TEST_SRC_FILES})
-target_include_directories(D2RMH PRIVATE d2mapapi)
-target_link_libraries(D2RMH d2mapapi shlwapi)
+add_subdirectory(common)
+add_subdirectory(inih)
+add_subdirectory(d2mapapi)
+add_subdirectory(src)
+add_subdirectory(tools)
