Work in progress
* add line to scene important targets(next level, quest or npc)
* add Izual quest tips
* minor bug fixes

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_library(common STATIC d2txt.cpp d2txt.h jsonlng.cpp jsonlng.h viewstream.h)
 target_include_directories(common PUBLIC . PRIVATE ../json)
+set_target_properties(common PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
