--- a/tools/gendata.ini
+++ b/tools/gendata.ini
@@ -1,73 +1,74 @@
 [guides]
 ; "string" = Map Name
 ; "+number" = Object with certain ID
+; "-number" = Npc(Monster) with certain ID
 ;Act1:
-guide[Blood Moor][Den of Evil]                    =1
-guide[Cold Plains][Crypt]                         =1
-guide[Stony Field][Cairn Stone]                   =1
-guide[Underground Passage Level 1][Dark Wood]     =1
-guide[Dark Wood][+30]                             =1
-guide[Black Marsh][Forgotten Tower]               =1
-guide[Tower Cellar Level 1][Tower Cellar Level 2] =1
-guide[Tower Cellar Level 2][Tower Cellar Level 3] =1
-guide[Tower Cellar Level 3][Tower Cellar Level 4] =1
-guide[Tower Cellar Level 4][Tower Cellar Level 5] =1
-guide[Tamoe Highland][Pit Level 1]                =1
-guide[Pit Level 1][Pit Level 2]                   =1
-guide[Barracks][+108]                             =1
-guide[Jail Level 1][Jail Level 2]                 =1
-guide[Jail Level 2][Jail Level 3]                 =1
-guide[Jail Level 3][Inner Cloister]               =1
-guide[Cathedral][Catacombs Level 1]               =1
-guide[Catacombs Level 1][Catacombs Level 2]       =1
-guide[Catacombs Level 2][Catacombs Level 3]       =1
-guide[Catacombs Level 3][Catacombs Level 4]       =1
+guide[Blood Moor][Den of Evil]                              =1
+guide[Cold Plains][Crypt]                                   =1
+guide[Stony Field][+61]                             =1
+guide[Underground Passage Level 1][Dark Wood]               =1
+guide[Dark Wood][+30]                                       =1
+guide[Black Marsh][Forgotten Tower]                         =1
+guide[Tower Cellar Level 1][Tower Cellar Level 2]           =1
+guide[Tower Cellar Level 2][Tower Cellar Level 3]           =1
+guide[Tower Cellar Level 3][Tower Cellar Level 4]           =1
+guide[Tower Cellar Level 4][Tower Cellar Level 5]           =1
+guide[Tamoe Highland][Pit Level 1]                          =1
+guide[Pit Level 1][Pit Level 2]                             =1
+guide[Barracks][+108]                                       =1
+guide[Jail Level 1][Jail Level 2]                           =1
+guide[Jail Level 2][Jail Level 3]                           =1
+guide[Jail Level 3][Inner Cloister]                         =1
+guide[Cathedral][Catacombs Level 1]                         =1
+guide[Catacombs Level 1][Catacombs Level 2]                 =1
+guide[Catacombs Level 2][Catacombs Level 3]                 =1
+guide[Catacombs Level 3][Catacombs Level 4]                 =1
 ;Act2:
-guide[Sewers Level 1][Sewers Level 2]             =1
-guide[Sewers Level 2][Sewers Level 3]             =1
-guide[Dry Hills][Halls of the Dead Level 1]       =1
-guide[Halls Dead Level 1][Halls Dead Level 2]     =1
-guide[Halls Dead Level 2][Halls Dead Level 3]     =1
-guide[Far Oasis][Maggot Lair Level 1]             =1
-guide[Maggot Lair Level 1][Maggot Lair Level 2]   =1
-guide[Maggot Lair Level 2][Maggot Lair Level 3]   =1
-guide[lost city][Claw Viper Temple Level 1]       =1
+guide[47][48]                                               =1
+guide[48][49]                                               =1
+guide[Dry Hills][Halls of the Dead Level 1]                 =1
+guide[Halls of the Dead Level 1][Halls of the Dead Level 2] =1
+guide[Halls of the Dead Level 2][Halls of the Dead Level 3] =1
+guide[Far Oasis][Maggot Lair Level 1]                       =1
+guide[Maggot Lair Level 1][Maggot Lair Level 2]             =1
+guide[Maggot Lair Level 2][Maggot Lair Level 3]             =1
+guide[Valley of Snakes][Claw Viper Temple Level 1]          =1
 guide[Claw Viper Temple Level 1][Claw Viper Temple Level 2] =1
-guide[Lost City][Ancient Tunnels]                 =1
-guide[Harem Level 1][Harem Level 2]               =1
-guide[Harem Level 2][Palace Cellar Level 1]       =1
-guide[Palace Cellar Level 1][Palace Cellar Level 2] =1
-guide[Palace Cellar Level 2][Palace Cellar Level 3] =1
-guide[Arcane Sanctuary][+357]                     =1
+guide[Lost City][Ancient Tunnels]                           =1
+guide[Harem Level 1][Harem Level 2]                         =1
+guide[Harem Level 2][Palace Cellar Level 1]                 =1
+guide[Palace Cellar Level 1][Palace Cellar Level 2]         =1
+guide[Palace Cellar Level 2][Palace Cellar Level 3]         =1
+guide[Arcane Sanctuary][+357]                               =1
 ;Act3:
-guide[Spider Forest][Spider Cavern]               =1
-guide[Flayer Jungle][+251]                        =1
+guide[Spider Forest][Spider Cavern]                         =1
+guide[Flayer Jungle][+251]                                  =1
 ;guide[Flayer Jungle][Flayer Dungeon Level 1]      =1
-guide[Flayer Dungeon Level 1][Flayer Dungeon Level 2] =1
-guide[Flayer Dungeon Level 2][Flayer Dungeon Level 3] =1
-guide[Kurast Bazaar][Ruined Temple]               =1
-guide[Kurast Sewers Level 1][Sewers Level 2]      =1
-guide[Travincal][Durance of Hate Level 1]         =1
-guide[Durance Level 1][Durance Level 2]           =1
-guide[Durance Level 2][Durance Level 3]           =1
+guide[Flayer Dungeon Level 1][Flayer Dungeon Level 2]       =1
+guide[Flayer Dungeon Level 2][Flayer Dungeon Level 3]       =1
+guide[Kurast Bazaar][Ruined Temple]                         =1
+guide[92][93]                =1
+guide[Travincal][Durance of Hate Level 1]                   =1
+guide[Durance of Hate Level 1][Durance of Hate Level 2]     =1
+guide[Durance of Hate Level 2][Durance of Hate Level 3]     =1
 ;Act4:
-;guide[Plains of Despair][Izual on Minimap]        =1  !!undetectable now!!
-guide[City Damned][River Flame]                   =1
-guide[River of Flame][+376]                       =1
+guide[Plains of Despair][-256]                              =1
+guide[City of the Damned][River of Flame]                   =1
+guide[River of Flame][+376]                                 =1
 ;Act5:
-guide[Arreat Plateau][Crystalline Passage]        =1
-guide[Crystalline Passage][Frozen River]          =1
-guide[Frozen River][+460]                         =1
-guide[Glacial Trail][Frozen Tundra]               =1
-guide[Nihlathak's Temple][Halls of Anguish]       =1
-guide[Halls of Anguish][Halls of Pain]            =1
-guide[Halls of Pain][Halls of Vaught]             =1
-guide[Halls of Vaught][+462]                      =1
-guide[Frozen Tundra][Ancients' Way]               =1
-guide[Glacial Caves Level 1][Arreat Summit]       =1
-guide[Worldstone Level 1][Worldstone Level 2]     =1
-guide[Worldstone Level 2][Worldstone Level 3]     =1
-guide[Worldstone Level 3][Throne Destruction]     =1
+guide[Arreat Plateau][Crystalline Passage]                  =1
+guide[Crystalline Passage][Frozen River]                    =1
+guide[Frozen River][+460]                                   =1
+guide[Glacial Trail][Frozen Tundra]                         =1
+guide[Nihlathak's Temple][Halls of Anguish]                 =1
+guide[Halls of Anguish][Halls of Pain]                      =1
+guide[Halls of Pain][Halls of Vaught]                       =1
+guide[Halls of Vaught][+462]                                =1
+guide[Frozen Tundra][The Ancients' Way]                     =1
+guide[The Ancients' Way][Arreat Summit]                     =1
+guide[Worldstone Keep Level 1][Worldstone Keep Level 2]     =1
+guide[Worldstone Keep Level 2][Worldstone Keep Level 3]     =1
+guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 
 [useful_names]
 Waypoint=Waypoint
@@ -95,13 +96,16 @@ Waypoint=Waypoint
 466=Chest  ;Evil Urn
 580=Chest  ;Unique Chest
 
+[useful_npcs]
+256=Izual  ;Izual
+
 [name_replace]
-61=StoneTheta
-354=box
-355=tr1
-356=Staff of Kings
-405=qhr
-406=qbr
-407=qey
-460=Drehya
-462=Nihlathak
+61=StoneTheta      ;Cairn Stones
+354=box            ;Horadric Cube
+355=tr1            ;Horadric Scroll
+356=Staff of Kings ;Staff Of Kings
+405=qhr            ;Khalim's Heart
+406=qbr            ;Khalim's Brain
+407=qey            ;Khalim's Eye
+460=Drehya         ;Anya
+462=Nihlathak      ;Nihlathak
