--- a/d2mapapi/CMakeLists.txt
+++ b/d2mapapi/CMakeLists.txt
@@ -1,2 +1,3 @@
 file(GLOB SRC_FILES *.cpp *.h)
 add_library(d2mapapi STATIC ${SRC_FILES})
+set_target_properties(d2mapapi PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
