--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ file(GLOB D2RMH_SRC_FILES *.cpp *.h)
 add_executable(D2RMH ${D2RMH_SRC_FILES})
 target_include_directories(D2RMH PRIVATE ../d2mapapi)
 target_link_libraries(D2RMH inih d2mapapi shlwapi)
+set_target_properties(D2RMH PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
