Work in progress
* try to add Well/Shrine to object display (but Shrines are not working)
* new format of D2RMH_data.ini, which is more clear and support filter objects by OperateFn
* optimize d2mapapi a bit
* add generated D2RMH_data.ini to repo

--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -5,7 +5,7 @@
 ;Act1:
 guide[Blood Moor][Den of Evil]                              =1
 guide[Cold Plains][Crypt]                                   =1
-guide[Stony Field][+61]                             =1
+guide[Stony Field][+61]                                     =1
 guide[Underground Passage Level 1][Dark Wood]               =1
 guide[Dark Wood][+30]                                       =1
 guide[Black Marsh][Forgotten Tower]                         =1
@@ -40,14 +40,21 @@ guide[Harem Level 2][Palace Cellar Level 1]                 =1
 guide[Palace Cellar Level 1][Palace Cellar Level 2]         =1
 guide[Palace Cellar Level 2][Palace Cellar Level 3]         =1
 guide[Arcane Sanctuary][+357]                               =1
+guide[66][+152]                                             =1
+guide[67][+152]                                             =1
+guide[68][+152]                                             =1
+guide[69][+152]                                             =1
+guide[70][+152]                                             =1
+guide[71][+152]                                             =1
+guide[72][+152]                                             =1
 ;Act3:
 guide[Spider Forest][Spider Cavern]                         =1
 guide[Flayer Jungle][+251]                                  =1
-;guide[Flayer Jungle][Flayer Dungeon Level 1]      =1
+;guide[Flayer Jungle][Flayer Dungeon Level 1]               =1   Flayer Dungeon is nearby Gidbinn, no need to tip it
 guide[Flayer Dungeon Level 1][Flayer Dungeon Level 2]       =1
 guide[Flayer Dungeon Level 2][Flayer Dungeon Level 3]       =1
 guide[Kurast Bazaar][Ruined Temple]                         =1
-guide[92][93]                =1
+guide[92][93]                                               =1
 guide[Travincal][Durance of Hate Level 1]                   =1
 guide[Durance of Hate Level 1][Durance of Hate Level 2]     =1
 guide[Durance of Hate Level 2][Durance of Hate Level 3]     =1
@@ -70,42 +77,35 @@ guide[Worldstone Keep Level 1][Worldstone Keep Level 2]     =1
 guide[Worldstone Keep Level 2][Worldstone Keep Level 3]     =1
 guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 
-[useful_names]
-Waypoint=Waypoint
+[useful_object_op]
+2=Shrine
+10=Quest                 ;Gibbet of Cairn
+12=Quest                 ;Tree of Inifuss
+21=Quest                 ;Malus
+22=Well
+23=Waypoint
+24=Quest                 ;Tainted Sun Altar
+25=Quest                 ;Where you place the Horadric staff
+28=Quest                 ;Lam Esen's Tome
+31=Quest                 ;Gidbinn
+34=Portal                ;Arcane Sanctuary portal
+39=Chest,box             ;Horadric Cube Chest
+40=Chest,tr1             ;Horadric Scroll Chest
+41=Chest,Staff of Kings  ;Staff Of Kings Chest
+42=Quest                 ;Horazon's Journal
+43=Portal                ;Portal to Duriel's Lair
+46=Portal                ;Hellgate
+49=Quest                 ;Hellforge
+57=Chest,qhr             ;Khalim's Heart
+58=Chest,qey             ;Khalim's Eye
+59=Chest,qbr             ;Khalim's Brain
+69=Chest                 ;Evil Urn
 
 [useful_objects]
-30=Quest   ;Tree of Inifuss
-61=Quest   ;Cairn Stones
-100=Portal ;Portal to Duriel's Lair
-108=Quest  ;Malus
-149=Quest  ;Tainted Sun Altar
-152=Quest  ;Where you place the Horadric staff
-251=Quest  ;Gidbinn Altar
-298=Portal ;Arcane Sanctuary portal
-342=Portal ;Hellgate
-354=Chest  ;Horadric Cube Chest
-355=Chest  ;Horadric Scroll Chest
-356=Chest  ;Staff Of Kings Chest
-357=Quest  ;Arcane Tome
-376=Portal ;Hellforge
-405=Chest  ;Khalim's Heart
-406=Chest  ;Khalim's Brain
-407=Chest  ;Khalim's Eye
-460=Quest  ;Anya
-462=Quest  ;Nihlathak
-466=Chest  ;Evil Urn
-580=Chest  ;Unique Chest
+61=Quest,StoneAlpha  ;Cairn Stones
+460=Quest,Drehya     ;Anya
+462=Quest,Nihlathak  ;Nihlathak
+580=Chest,chest      ;Unique Chest
 
 [useful_npcs]
-256=Izual  ;Izual
-
-[name_replace]
-61=StoneTheta      ;Cairn Stones
-354=box            ;Horadric Cube
-355=tr1            ;Horadric Scroll
-356=Staff of Kings ;Staff Of Kings
-405=qhr            ;Khalim's Heart
-406=qbr            ;Khalim's Brain
-407=qey            ;Khalim's Eye
-460=Drehya         ;Anya
-462=Nihlathak      ;Nihlathak
+256=Quest  ;Izual
