--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -4,7 +4,7 @@
 ; "-number" = Npc(Monster) with certain ID
 ;Act1:
 guide[Blood Moor][Den of Evil]                              =1
-guide[Cold Plains][Crypt]                                   =1
+guide[Cold Plains][Burial Grounds]                          =1
 guide[Stony Field][+61]                                     =1
 guide[Underground Passage Level 1][Dark Wood]               =1
 guide[Dark Wood][+30]                                       =1
