--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -1,5 +1,26 @@
 [main]
+; path to your Diablo II LOD v1.13c
 d2_path = .
+; font settings
 font_file_path = C:\Windows\Fonts\Arial.ttf
 font_size = 12
+; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
 language = enUS
+
+[ui]
+; 0-show map layer when in-game map is off
+; 1-show map layer when in-game map is on
+; 2-show map layer always
+show = 0
+; 0-draw a short line with dot ahead to target (d2hackmap style)
+; 1-draw a full line to target
+full_line = 0
+; 0-top left
+; 1-top right
+; 2-center
+position = 1
+; map scaling, can be 1.0-4.0, cut when larger than game window
+scale = 1.0
+; 0-static map
+; 1-keep player in map center
+map_centered = 0
