Work in progress
* reduce memory use of vertex buffers
* alpha and all color values can be set in configuration file now

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -24,3 +24,20 @@ scale = 1.0
 ; 0-static map
 ; 1-keep player in map center
 map_centered = 0
+; Alpha channel for whole layer (0-255)
+alpha = 170
+; walkable area color (R,G,B) 0-255 for each channel
+walkable_color = 50,50,50
+; text color
+text_color = 255,255,255
+; colors for player pointer (inner/outer)
+player_inner_color = 255,128,128
+player_outer_color = 51,255,255
+; guide line color
+line_color = 204,204,204
+; colors for waypoint/portal/chest/quest/well
+waypoint_color = 153,153,255
+portal_color = 255,153,255
+chest_color = 255,102,102
+quest_color = 102,102,255
+well_color = 51,51,255
