[#2] add 397 to useful_objects

--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -181,6 +181,7 @@
 357=Quest|Tome
 361=Shrine|magic shrine
 376=Quest|Hellforge
+397=Chest|chest
 398=Waypoint|Waypoint
 402=Waypoint|Waypoint
 405=Chest|qhr
