--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -103,6 +103,7 @@ guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 
 [useful_objects]
 61=Quest,StoneAlpha  ;Cairn Stones
+397=Chest            ;Sparky Chest
 460=Quest,Drehya     ;Anya
 462=Quest,Nihlathak  ;Nihlathak
 580=Chest,chest      ;Unique Chest
