add 473(Caged Barbarian Quest) to useful objects

--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -197,6 +197,7 @@
 464=Shrine|healthshrine
 465=Shrine|manashrine
 472=Shrine|icecaveshrine2
+473=Quest|cagedwussie1
 479=Shrine|icecaveshrine2
 483=Shrine|manashrine
 484=Shrine|healthshrine
@@ -2059,6 +2060,19 @@ box[9]=ホラドリムのキューブ
 box[10]=Cubo Horádrico
 box[11]=Хорадримский куб
 box[12]=赫拉迪姆魔盒
+cagedwussie1[0]=Cage
+cagedwussie1[1]=籠子
+cagedwussie1[2]=Käfig
+cagedwussie1[3]=Jaula
+cagedwussie1[4]=Cage
+cagedwussie1[5]=Gabbia
+cagedwussie1[6]=우리
+cagedwussie1[7]=Klatka
+cagedwussie1[8]=Jaula
+cagedwussie1[9]=檻
+cagedwussie1[10]=Gaiola
+cagedwussie1[11]=Клетка
+cagedwussie1[12]=笼子
 chest[0]=Chest
 chest[1]=箱子
 chest[2]=Truhe
