--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -106,6 +106,7 @@ guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 397=Chest            ;Sparky Chest
 460=Quest,Drehya     ;Anya
 462=Quest,Nihlathak  ;Nihlathak
+473=Quest            ;Caged Barbarian
 580=Chest,chest      ;Unique Chest
 
 [useful_npcs]
