--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ add_subdirectory(glad)
 file(GLOB D2RMH_SRC_FILES *.cpp *.h *.rc)
 add_executable(D2RMH WIN32 ${D2RMH_SRC_FILES})
 target_include_directories(D2RMH PRIVATE ../d2mapapi stb)
-target_link_libraries(D2RMH glad inih d2mapapi shlwapi)
+target_link_libraries(D2RMH glad inih d2mapapi shlwapi winmm)
 set_target_properties(D2RMH PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
