--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -40,4 +40,7 @@ waypoint_color = 153,153,255
 portal_color = 255,153,255
 chest_color = 255,102,102
 quest_color = 102,102,255
+shrine_color = 255,51,178
 well_color = 51,51,255
+; show in-memory nearby objects(currently only shrines)
+show_objects = 1
