--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -139,30 +139,83 @@
 136=Tristram
 
 [objects]
+2=Shrine|Shrine
 26=Quest|Gibbet
 30=Quest|Inifuss
 61=Quest|StoneAlpha
+77=Shrine|Shrine
+81=Shrine|Shrine
+83=Shrine|Shrine
+84=Shrine|Shrine
+85=Shrine|Shrine
+93=Shrine|Shrine
+96=Shrine|Shrine
+97=Shrine|Shrine
 100=Portal|Duriel's Lair
 108=Quest|Malus
+109=Shrine|Shrine
 111=Well|well
 113=Well|well
 115=Well|well
-118=Well|Well
+116=Shrine|Shrine
+118=Well|well
 119=Waypoint|Waypoint
-130=Well|Well
-132=Well|Well
-137=Well|Well
-138=Well|Well
+123=Shrine|Shrine
+124=Shrine|Shrine
+130=Well|well
+132=Well|well
+133=Shrine|shrine
+134=Shrine|shrine
+135=Shrine|shrine
+136=Shrine|shrine
+137=Well|well
+138=Well|well
 145=Waypoint|Waypoint
 149=Quest|taintedsunaltar
+150=Shrine|shrine
+151=Shrine|shrine
 152=Quest|orifice
 156=Waypoint|Waypoint
 157=Waypoint|Waypoint
+164=Shrine|Shrine
+165=Shrine|Shrine
+166=Shrine|Shrine
+167=Shrine|Shrine
+168=Shrine|Shrine
+170=Shrine|Shrine
+172=Shrine|Shrine
+173=Shrine|Shrine
+184=Shrine|Shrine
+190=Shrine|Shrine
+191=Shrine|Shrine
 193=Quest|LamTome
+197=Shrine|Shrine
+199=Shrine|Shrine
+200=Shrine|Shrine
+201=Shrine|Shrine
+202=Shrine|Shrine
+206=Shrine|Shrine
+226=Shrine|Shrine
+231=Shrine|Shrine
+232=Shrine|Shrine
+236=Shrine|Shrine
 237=Waypoint|Waypoint
 238=Waypoint|Waypoint
 249=Shrine|manashrine
 252=Quest|gidbinn
+260=Shrine|Shrine
+262=Shrine|Shrine
+263=Shrine|Shrine
+264=Shrine|Shrine
+265=Shrine|Shrine
+275=Shrine|Shrine
+276=Shrine|Shrine
+277=Shrine|Shrine
+278=Shrine|Shrine
+279=Shrine|Shrine
+280=Shrine|Shrine
+281=Shrine|Shrine
+282=Shrine|Shrine
 288=Waypoint|Waypoint
 298=Portal|portal
 299=Shrine|magic shrine
@@ -170,11 +223,13 @@
 302=Shrine|manashrine
 303=Shrine|magic shrine
 320=Shrine|manashrine
-322=Well|Well
+322=Well|well
 323=Waypoint|Waypoint
 324=Waypoint|Waypoint
 325=Shrine|magic shrine
 342=Portal|portal
+343=Shrine|Shrine
+344=Shrine|Shrine
 354=Chest|box
 355=Chest|tr1
 356=Chest|Staff of Kings
@@ -188,9 +243,14 @@
 406=Chest|qbr
 407=Chest|qey
 410=Portal|Siege Control
+414=Shrine|Shrine3wilderness
+415=Shrine|Shrine2wilderness
+421=Shrine|Shrine3wilderness
 422=Shrine|manashrine
 423=Shrine|healthshrine
 426=Well|well
+427=Shrine|Shrine2wilderness
+428=Shrine|Shrine2wilderness
 429=Waypoint|Waypoint
 460=Quest|Drehya
 462=Quest|Nihlathak
@@ -225,6 +285,31 @@
 
 [npcs]
 256=Quest|izual
+
+[shrines]
+0=ShrId0
+1=ShrId1
+2=ShrId2
+3=ShrId3
+4=ShrId4
+5=ShrId5
+6=ShrId6
+7=ShrId7
+8=ShrId8
+9=ShrId9
+10=ShrId10
+11=ShrId11
+12=ShrId12
+13=ShrId13
+14=ShrId14
+15=ShrId15
+16=ShrId16
+17=ShrId17
+18=ShrId18
+19=ShrId19
+20=ShrId20
+21=ShrId21
+22=ShrId22
 
 [strings]
 Ancient Tunnels[0]=Ancient Tunnels
@@ -1592,6 +1677,344 @@ Sewers Level 3[9]=下水道: 第3階層
 Sewers Level 3[10]=Esgoto Nível 3
 Sewers Level 3[11]=Стоки: 3-й уровень
 Sewers Level 3[12]=下水道三层
+ShrId0[0]=Null Shrine
+ShrId0[1]=空無聖壇
+ShrId0[2]=Schrein des Nichts
+ShrId0[3]=Santuario nulo
+ShrId0[4]=Sanctuaire vide
+ShrId0[5]=Santuario nullo
+ShrId0[6]=무효화의 신단
+ShrId0[7]=Pusta kapliczka
+ShrId0[8]=Sagrario nulo
+ShrId0[9]=無の祭壇
+ShrId0[10]=Altar Nulificante
+ShrId0[11]=Нуль-святилище
+ShrId0[12]=虚无圣坛
+ShrId1[0]=Refilling Shrine
+ShrId1[1]=回復聖壇
+ShrId1[2]=Füllender Schrein
+ShrId1[3]=Santuario de recarga
+ShrId1[4]=Sanctuaire de recharge
+ShrId1[5]=Santuario della ricarica
+ShrId1[6]=보충의 신단
+ShrId1[7]=Kapliczka napełnienia
+ShrId1[8]=Sagrario de regeneración
+ShrId1[9]=回復の祭壇
+ShrId1[10]=Altar Restaurador
+ShrId1[11]=Святилище восстановления
+ShrId1[12]=恢复圣坛
+ShrId10[0]=Resist Lightning Shrine
+ShrId10[1]=抗電聖壇
+ShrId10[2]=Schrein des Blitzwiderstands
+ShrId10[3]=Santuario de resistencia a los rayos
+ShrId10[4]=Sanctuaire de résistance à la Foudre
+ShrId10[5]=Santuario della resistenza al fulmine
+ShrId10[6]=번개 저항의 신단
+ShrId10[7]=Kapliczka odporności na błyskawice
+ShrId10[8]=Sagrario de resistencia al rayo
+ShrId10[9]=電撃耐性の祭壇
+ShrId10[10]=Altar de Resistência Elétrica
+ShrId10[11]=Святилище сопротивления молнии
+ShrId10[12]=抗雷圣坛
+ShrId11[0]=Resist Poison Shrine
+ShrId11[1]=抗毒聖壇
+ShrId11[2]=Schrein des Giftwiderstands
+ShrId11[3]=Santuario de resistencia al veneno
+ShrId11[4]=Sanctuaire de résistance au Poison
+ShrId11[5]=Santuario della resistenza al veleno
+ShrId11[6]=독 저항의 신단
+ShrId11[7]=Kapliczka odporności na trucizny
+ShrId11[8]=Sagrario de resistencia al veneno
+ShrId11[9]=毒物耐性の祭壇
+ShrId11[10]=Altar de Resistência a Veneno
+ShrId11[11]=Святилище сопротивления яду
+ShrId11[12]=抗毒圣坛
+ShrId12[0]=Skill Shrine
+ShrId12[1]=技能聖壇
+ShrId12[2]=Fertigkeitsschrein
+ShrId12[3]=Santuario de habilidad
+ShrId12[4]=Sanctuaire de compétence
+ShrId12[5]=Santuario dell'abilità
+ShrId12[6]=기술의 신단
+ShrId12[7]=Kapliczka umiejętności
+ShrId12[8]=Sagrario de habilidad
+ShrId12[9]=スキルの祭壇
+ShrId12[10]=Altar de Habilidades
+ShrId12[11]=Святилище умений
+ShrId12[12]=技能圣坛
+ShrId13[0]=Mana Recharge Shrine
+ShrId13[1]=法力恢復聖壇
+ShrId13[2]=Schrein der Manaerneuerung
+ShrId13[3]=Santuario de recarga de maná
+ShrId13[4]=Sanctuaire de recharge de mana
+ShrId13[5]=Santuario della ricarica del mana
+ShrId13[6]=마나 충전의 신단
+ShrId13[7]=Kapliczka odzyskiwania many
+ShrId13[8]=Sagrario de recarga de maná
+ShrId13[9]=マナ再生の祭壇
+ShrId13[10]=Altar de Recarga de Mana
+ShrId13[11]=Святилище восполнения маны
+ShrId13[12]=法力补充圣坛
+ShrId14[0]=Stamina Shrine
+ShrId14[1]=精力聖壇
+ShrId14[2]=Ausdauerschrein
+ShrId14[3]=Santuario de aguante
+ShrId14[4]=Sanctuaire d’endurance
+ShrId14[5]=Santuario del vigore
+ShrId14[6]=지구력의 신단
+ShrId14[7]=Kapliczka wytrzymałości
+ShrId14[8]=Sagrario de vigor
+ShrId14[9]=スタミナの祭壇
+ShrId14[10]=Altar de Vigor
+ShrId14[11]=Святилище выносливости
+ShrId14[12]=耐力圣坛
+ShrId15[0]=Experience Shrine
+ShrId15[1]=經驗聖壇
+ShrId15[2]=Erfahrungsschrein
+ShrId15[3]=Santuario de experiencia
+ShrId15[4]=Sanctuaire d’expérience
+ShrId15[5]=Santuario dell'esperienza
+ShrId15[6]=경험의 신단
+ShrId15[7]=Kapliczka doświadczenia
+ShrId15[8]=Sagrario de experiencia
+ShrId15[9]=経験の祭壇
+ShrId15[10]=Altar de Experiência
+ShrId15[11]=Святилище опыта
+ShrId15[12]=经验圣坛
+ShrId16[0]=Enirhs Shrine
+ShrId16[1]=壇聖聖壇
+ShrId16[2]=Nierhcs-Schrein
+ShrId16[3]=Santuario de Oirautnas
+ShrId16[4]=Sanctuaire d’Enirhs
+ShrId16[5]=Santuario di Enirh
+ShrId16[6]=에니르의 신단
+ShrId16[7]=Kapliczka akczilpak
+ShrId16[8]=Sagrario oirargas
+ShrId16[9]=ンダイサの祭壇
+ShrId16[10]=Altar de Ratla
+ShrId16[11]=Святилище Ещилитявс
+ShrId16[12]=颠倒圣坛
+ShrId17[0]=Portal Shrine
+ShrId17[1]=傳送聖壇
+ShrId17[2]=Portalschrein
+ShrId17[3]=Santuario de portal
+ShrId17[4]=Sanctuaire de portail
+ShrId17[5]=Santuario del portale
+ShrId17[6]=차원문의 신단
+ShrId17[7]=Kapliczka portalu
+ShrId17[8]=Sagrario de portal
+ShrId17[9]=ポータルの祭壇
+ShrId17[10]=Altar do Portal
+ShrId17[11]=Святилище портала
+ShrId17[12]=传送圣坛
+ShrId18[0]=Gem Shrine
+ShrId18[1]=寶石聖壇
+ShrId18[2]=Edelsteinschrein
+ShrId18[3]=Santuario de gema
+ShrId18[4]=Sanctuaire de gemme
+ShrId18[5]=Santuario della gemma
+ShrId18[6]=보석의 신단
+ShrId18[7]=Kapliczka klejnotów
+ShrId18[8]=Sagrario de gema
+ShrId18[9]=宝石の祭壇
+ShrId18[10]=Altar de Gema
+ShrId18[11]=Святилище самоцветов
+ShrId18[12]=宝石圣坛
+ShrId19[0]=Fire Shrine
+ShrId19[1]=火焰聖壇
+ShrId19[2]=Feuerschrein
+ShrId19[3]=Santuario de fuego
+ShrId19[4]=Sanctuaire de Feu
+ShrId19[5]=Santuario del fuoco
+ShrId19[6]=불의 신단
+ShrId19[7]=Kapliczka ognia
+ShrId19[8]=Sagrario de fuego
+ShrId19[9]=火炎の祭壇
+ShrId19[10]=Altar Ígneo
+ShrId19[11]=Святилище огня
+ShrId19[12]=火焰圣坛
+ShrId2[0]=Health Shrine
+ShrId2[1]=生命聖壇
+ShrId2[2]=Gesundheitsschrein
+ShrId2[3]=Santuario de salud
+ShrId2[4]=Sanctuaire de santé
+ShrId2[5]=Santuario della salute
+ShrId2[6]=생명의 신단
+ShrId2[7]=Kapliczka zdrowia
+ShrId2[8]=Sagrario de vida
+ShrId2[9]=命の祭壇
+ShrId2[10]=Altar de Vida
+ShrId2[11]=Святилище здоровья
+ShrId2[12]=生命圣坛
+ShrId20[0]=Monster Shrine
+ShrId20[1]=怪物聖壇
+ShrId20[2]=Monsterschrein
+ShrId20[3]=Santuario monstruoso
+ShrId20[4]=Sanctuaire de monstre
+ShrId20[5]=Santuario del mostro
+ShrId20[6]=괴물의 신단
+ShrId20[7]=Kapliczka potworów
+ShrId20[8]=Sagrario de monstruos
+ShrId20[9]=魔物の祭壇
+ShrId20[10]=Altar Monstruoso
+ShrId20[11]=Святилище монстров
+ShrId20[12]=怪物圣坛
+ShrId21[0]=Exploding Shrine
+ShrId21[1]=爆炸聖壇
+ShrId21[2]=Explosionsschrein
+ShrId21[3]=Santuario explosivo
+ShrId21[4]=Sanctuaire explosif
+ShrId21[5]=Santuario dell'esplosione
+ShrId21[6]=폭발의 신단
+ShrId21[7]=Kapliczka eksplozji
+ShrId21[8]=Sagrario explosivo
+ShrId21[9]=爆発の祭壇
+ShrId21[10]=Altar Explosivo
+ShrId21[11]=Святилище взрывов
+ShrId21[12]=爆炸圣坛
+ShrId22[0]=Poison Shrine
+ShrId22[1]=劇毒聖壇
+ShrId22[2]=Giftschrein
+ShrId22[3]=Santuario de veneno
+ShrId22[4]=Sanctuaire de Poison
+ShrId22[5]=Santuario del veleno
+ShrId22[6]=독의 신단
+ShrId22[7]=Kapliczka trucizny
+ShrId22[8]=Sagrario de veneno
+ShrId22[9]=毒の祭壇
+ShrId22[10]=Altar Venenoso
+ShrId22[11]=Святилище яда
+ShrId22[12]=毒素圣坛
+ShrId3[0]=Mana Shrine
+ShrId3[1]=法力聖壇
+ShrId3[2]=Manaschrein
+ShrId3[3]=Santuario de maná
+ShrId3[4]=Sanctuaire de mana
+ShrId3[5]=Santuario del mana
+ShrId3[6]=마나의 신단
+ShrId3[7]=Kapliczka many
+ShrId3[8]=Sagrario de maná
+ShrId3[9]=マナの祭壇
+ShrId3[10]=Altar de Mana
+ShrId3[11]=Святилище маны
+ShrId3[12]=法力圣坛
+ShrId4[0]=Health Exchange Shrine
+ShrId4[1]=生命交換聖壇
+ShrId4[2]=Schrein des Gesundheitstausches
+ShrId4[3]=Santuario de intercambio de salud
+ShrId4[4]=Sanctuaire d’échange de santé
+ShrId4[5]=Santuario dello scambio di salute
+ShrId4[6]=생명 교환의 신단
+ShrId4[7]=Kapliczka zamiany zdrowia
+ShrId4[8]=Sagrario de intercambio de vida
+ShrId4[9]=命の交換の祭壇
+ShrId4[10]=Altar de Troca de Vida
+ShrId4[11]=Святилище обмена здоровьем
+ShrId4[12]=生命交换圣坛
+ShrId5[0]=Mana Exchange Shrine
+ShrId5[1]=法力交換聖壇
+ShrId5[2]=Schrein des Manatausches
+ShrId5[3]=Santuario de intercambio de maná
+ShrId5[4]=Sanctuaire d’échange de mana
+ShrId5[5]=Santuario dello scambio di mana
+ShrId5[6]=마나 교환의 신단
+ShrId5[7]=Kapliczka zamiany many
+ShrId5[8]=Sagrario de intercambio de maná
+ShrId5[9]=マナ交換の祭壇
+ShrId5[10]=Altar de Troca de Mana
+ShrId5[11]=Святилище обмена маной
+ShrId5[12]=法力交换圣坛
+ShrId6[0]=Armor Shrine
+ShrId6[1]=護甲聖壇
+ShrId6[2]=Rüstungsschrein
+ShrId6[3]=Santuario de armadura
+ShrId6[4]=Sanctuaire d’armure
+ShrId6[5]=Santuario dell'armatura
+ShrId6[6]=방어의 신단
+ShrId6[7]=Kapliczka zbroi
+ShrId6[8]=Sagrario de armadura
+ShrId6[9]=守りの祭壇
+ShrId6[10]=Altar de Armadura
+ShrId6[11]=Святилище брони
+ShrId6[12]=护甲圣坛
+ShrId7[0]=Combat Shrine
+ShrId7[1]=作戰聖壇
+ShrId7[2]=Kampfschrein
+ShrId7[3]=Santuario de combate
+ShrId7[4]=Sanctuaire de combat
+ShrId7[5]=Santuario del combattimento
+ShrId7[6]=전투의 신단
+ShrId7[7]=Kapliczka walki
+ShrId7[8]=Sagrario de combate
+ShrId7[9]=戦いの祭壇
+ShrId7[10]=Altar de Combate
+ShrId7[11]=Святилище сражений
+ShrId7[12]=战斗圣坛
+ShrId8[0]=Resist Fire Shrine
+ShrId8[1]=抗火聖壇
+ShrId8[2]=Schrein des Feuerwiderstands
+ShrId8[3]=Santuario de resistencia al fuego
+ShrId8[4]=Sanctuaire de résistance au Feu
+ShrId8[5]=Santuario della resistenza al fuoco
+ShrId8[6]=화염 저항의 신단
+ShrId8[7]=Kapliczka odporności na ogień
+ShrId8[8]=Sagrario de resistencia al fuego
+ShrId8[9]=火炎耐性の祭壇
+ShrId8[10]=Altar de Resistência a Fogo
+ShrId8[11]=Святилище сопротивления огню
+ShrId8[12]=抗火圣坛
+ShrId9[0]=Resist Cold Shrine
+ShrId9[1]=抗寒聖壇
+ShrId9[2]=Schrein des Kältewiderstands
+ShrId9[3]=Santuario de resistencia al frío
+ShrId9[4]=Sanctuaire de résistance au Froid
+ShrId9[5]=Santuario della resistenza al freddo
+ShrId9[6]=냉기 저항의 신단
+ShrId9[7]=Kapliczka odporności na zimno
+ShrId9[8]=Sagrario de resistencia al frío
+ShrId9[9]=冷気耐性の祭壇
+ShrId9[10]=Altar de Resistência a Gelo
+ShrId9[11]=Святилище сопротивления льду
+ShrId9[12]=抗冰圣坛
+Shrine[0]=Shrine
+Shrine[1]=聖壇
+Shrine[2]=[ms]Schrein
+Shrine[3]=Santuario
+Shrine[4]=Sanctuaire
+Shrine[5]=[ms]Santuario
+Shrine[6]=신단
+Shrine[7]=Kapliczka
+Shrine[8]=Sagrario
+Shrine[9]=祭壇
+Shrine[10]=Altar
+Shrine[11]=Святилище
+Shrine[12]=圣坛
+Shrine2wilderness[0]=Shrine
+Shrine2wilderness[1]=聖壇
+Shrine2wilderness[2]=Schrein
+Shrine2wilderness[3]=Santuario
+Shrine2wilderness[4]=Sanctuaire
+Shrine2wilderness[5]=Santuario
+Shrine2wilderness[6]=신단
+Shrine2wilderness[7]=Kapliczka
+Shrine2wilderness[8]=Sagrario
+Shrine2wilderness[9]=祭壇
+Shrine2wilderness[10]=Altar
+Shrine2wilderness[11]=Святилище
+Shrine2wilderness[12]=圣坛
+Shrine3wilderness[0]=Shrine
+Shrine3wilderness[1]=聖壇
+Shrine3wilderness[2]=Schrein
+Shrine3wilderness[3]=Santuario
+Shrine3wilderness[4]=Sanctuaire
+Shrine3wilderness[5]=Santuario
+Shrine3wilderness[6]=신단
+Shrine3wilderness[7]=Kapliczka
+Shrine3wilderness[8]=Sagrario
+Shrine3wilderness[9]=祭壇
+Shrine3wilderness[10]=Altar
+Shrine3wilderness[11]=Святилище
+Shrine3wilderness[12]=圣坛
 Siege Control[0]=Siege Control
 Siege Control[1]=圍城控制器
 Siege Control[2]=Belagerungskontrolle
@@ -2034,19 +2457,6 @@ Waypoint[9]=ウェイポイント
 Waypoint[10]=Marco de Senda
 Waypoint[11]=Путевой камень
 Waypoint[12]=传送点
-Well[0]=Well
-Well[1]=井
-Well[2]=Brunnen
-Well[3]=Pozo
-Well[4]=Puits
-Well[5]=Pozzo
-Well[6]=우물
-Well[7]=Studnia
-Well[8]=Pozo
-Well[9]=泉
-Well[10]=Poço
-Well[11]=Колодец
-Well[12]=井
 box[0]=Horadric Cube
 box[1]=赫拉迪姆方塊
 box[2]=Horadrimwürfel
@@ -2242,6 +2652,19 @@ qhr[9]=カリムの心臓
 qhr[10]=Coração de Khalim
 qhr[11]=Сердце Халима
 qhr[12]=卡林姆的心脏
+shrine[0]=shrine
+shrine[1]=聖壇
+shrine[2]=Schrein
+shrine[3]=Santuario
+shrine[4]=Sanctuaire
+shrine[5]=Santuario
+shrine[6]=신단
+shrine[7]=kapliczka
+shrine[8]=sagrario
+shrine[9]=祭壇
+shrine[10]=altar
+shrine[11]=святилище
+shrine[12]=圣坛
 taintedsunaltar[0]=Tainted Sun Altar
 taintedsunaltar[1]=蔽日祭壇
 taintedsunaltar[2]=Entweihter Sonnenaltar
