--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -82,7 +82,7 @@ guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 10=Quest                 ;Gibbet of Cairn
 12=Quest                 ;Tree of Inifuss
 21=Quest                 ;Malus
-22=Well
+22=Well,well
 23=Waypoint
 24=Quest                 ;Tainted Sun Altar
 25=Quest                 ;Where you place the Horadric staff
