--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -44,3 +44,11 @@ shrine_color = 255,51,178
 well_color = 51,51,255
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
+; show in-memory nearby monsters(only super-unique/boss/champion ones are shown)
+show_monsters = 1
+; show monster's name
+show_monster_name = 1
+; show monster's enchant
+; S-ExtraStrong F-ExtraFast C-Curse M-MagicResist fe-FireEnchant ce-ColdEnchant le-LightningEnchant
+; mb-ManaBurn T-teleport H-SpeSpectralHit ss-StoneSkin ms-MultiShot A-Aura F-Fanatic B-Berserk
+show_monster_enchant = 1
