--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -52,3 +52,7 @@ show_monster_name = 1
 ; S-ExtraStrong F-ExtraFast C-Curse M-MagicResist fe-FireEnchant ce-ColdEnchant le-LightningEnchant
 ; mb-ManaBurn T-teleport H-SpeSpectralHit ss-StoneSkin ms-MultiShot A-Aura F-Fanatic B-Berserk
 show_monster_enchant = 1
+; show monster's resist(immune), as character `i` with various colors:
+;   Gold-Physical Orange-Magic Red-Fire Yellow-Lightning Blue-Cold Green-Poison
+; if you cannot see the characters clearly, try to change font or enlarge font size
+show_monster_immune = 1
