work in progress
* fix a rare case that player pointer cannot be found
* add FPS/VSync setting to config ini

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -8,6 +8,11 @@ font_size = 12
 language = enUS
 
 [ui]
+; Positive value will limit FPS to certain value, negative value will change OpenGL context swap interval:
+;   0=No limit and Disable VSync
+;  -1=Enable VSync(aka equal to video adapter fps),
+;  -2=VSync with 2 frames per swap(aka video adapter fps/2), etc.
+fps = -1
 ; 0-show map layer when in-game map is off
 ; 1-show map layer when in-game map is on
 ; 2-show map layer always
