work in progress
* add enchants display text settings to config ini
* fix a display bug imported from last commit

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -61,3 +61,26 @@ show_monster_enchant = 1
 ;   Gold-Physical Orange-Magic Red-Fire Yellow-Lightning Blue-Cold Green-Poison
 ; if you cannot see the characters clearly, try to change font or enlarge font size
 show_monster_immune = 1
+
+[enchants]
+extra_strong = S
+extra_fast = F
+cursed = {2}C
+magic_resistant = M
+fire_enchanted = {1}FE
+ligntning_enchanted = {9}LE
+cold_enchanted = {3}CE
+mana_burn = {3}MB
+teleportation = T
+spectral_hit = H
+stone_skin = {4}SS
+multiple_shots = {12}MS
+fanatic = {11}F
+berserker = {4}B
+aura = A
+physical_immunity = {4}i
+magic_immunity = {8}i
+fire_immunity = {1}i
+lightning_immunity = {9}i
+cold_immunity = {3}i
+poison_immunity = {2}i
