--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -49,20 +49,24 @@ shrine_color = 255,51,178
 well_color = 51,51,255
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
-; show in-memory nearby monsters(only super-unique/boss/champion ones are shown)
+; show in-memory nearby monsters
 show_monsters = 1
+; show normal monsters
+;  0 - only NPCs/super-uniques/bosses/champions are shown
+;  1 - common monsters and minions are also shown
+show_normal_monsters = 0
 ; show monster's name
 show_monster_name = 1
-; show monster's enchant
-; S-ExtraStrong F-ExtraFast C-Curse M-MagicResist fe-FireEnchant ce-ColdEnchant le-LightningEnchant
-; mb-ManaBurn T-teleport H-SpeSpectralHit ss-StoneSkin ms-MultiShot A-Aura F-Fanatic B-Berserk
+; show monster's enchant including aura, check [enchants] section below.
 show_monster_enchant = 1
-; show monster's resist(immune), as character `i` with various colors:
-;   Gold-Physical Orange-Magic Red-Fire Yellow-Lightning Blue-Cold Green-Poison
-; if you cannot see the characters clearly, try to change font or enlarge font size
+; show monster's resist(immune), check [enchants] section below.
 show_monster_immune = 1
 
 [enchants]
+; strings can be tagged with color, in form '{n}', while n is taken from d2hackmap:
+;  0-text color 1-red 2-green 3-blue 4-gold 5-gray 6-black 7-gold2
+;  8-orange 9-yellow 10-green2 11-purple 12-green3 13~15-white
+; if no color is set, white is selected by default.
 extra_strong = S
 extra_fast = F
 cursed = {2}C
@@ -77,7 +81,15 @@ stone_skin = {4}SS
 multiple_shots = {12}MS
 fanatic = {11}F
 berserker = {4}B
-aura = A
+; auras
+might_aura = {4}A
+holyFire_aura = {1}A
+blessedAim_aura = A
+holyFreeze_aura = {3}A
+holyShock_aura = {9}A
+conviction_aura = {11}A
+fanaticism_aura = {5}A
+; immnuties
 physical_immunity = {4}i
 magic_immunity = {8}i
 fire_immunity = {1}i
