work in progress
* update README, separate ChangeLog out
* add a snapshot-pack target to cmake build system
* update GitHub Actions to use snapshot-pack for artifacts uploading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,3 +60,24 @@ add_subdirectory(inih)
 add_subdirectory(d2mapapi)
 add_subdirectory(src)
 add_subdirectory(tools)
+
+set(ZIP_OUTPUT "${CMAKE_BINARY_DIR}/bin/D2RMH-snapshot.zip")
+add_custom_command(
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:D2RMH> ${CMAKE_SOURCE_DIR}/bin/D2RMH.ini ${CMAKE_SOURCE_DIR}/bin/D2RMH_data.ini ${CMAKE_SOURCE_DIR}/ChangeLog ${CMAKE_SOURCE_DIR}/LICENSE ${CMAKE_SOURCE_DIR}/README.md ${CMAKE_BINARY_DIR}/bin
+    COMMAND ${CMAKE_COMMAND} -E tar "cf" "${ZIP_OUTPUT}" --format=zip -- D2RMH.exe D2RMH.ini D2RMH_data.ini ChangeLog LICENSE README.md
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    OUTPUT  "${ZIP_OUTPUT}"
+    DEPENDS D2RMH
+    COMMENT "Zipping to ${ZIP_OUTPUT}."
+)
+set(ZIP_OUTPUT2 "${CMAKE_BINARY_DIR}/bin/gendata-snapshot.zip")
+add_custom_command(
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:gendata> ${CMAKE_SOURCE_DIR}/bin/gendata.ini ${CMAKE_BINARY_DIR}/bin
+    COMMAND ${CMAKE_COMMAND} -E tar "cf" "${ZIP_OUTPUT2}" --format=zip -- gendata.exe gendata.ini
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+    OUTPUT  "${ZIP_OUTPUT2}"
+    DEPENDS gendata
+    COMMENT "Zipping to ${ZIP_OUTPUT2}."
+)
+add_custom_target(snapshot-pack ALL
+    DEPENDS "${ZIP_OUTPUT}" "${ZIP_OUTPUT2}")
