Work in progress
* add dropped item filter, with `show_items`, `msg_font_size`, `msg_bg_color` added to config ini
* add D2RMH_item.ini as item filter config, check comments inside for detail
* add `monster_color`, `unique_monster_color`, `npc_color` to config ini
* refactoring some remote mem reading codes to make it more readable
* refactoring string matching codes to improve performance

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(CascLib)
 
-add_executable(gendata gendata.cpp)
+add_executable(gendata EXCLUDE_FROM_ALL gendata.cpp)
 target_compile_definitions(gendata PRIVATE CASCLIB_NO_AUTO_LINK_LIBRARY)
 target_include_directories(gendata PRIVATE ../json)
 target_link_libraries(gendata inih common casc)
