--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -4,6 +4,8 @@ d2_path = .
 ; font settings
 font_file_path = C:\Windows\Fonts\Arial.ttf
 font_size = 12
+; font size for message list
+msg_font_size = 24
 ; can be: enUS,deDE,esES,frFR,itIT,koKR,plPL,esMX,jpJP,ptBR,ruRU,zhTW,zhCN
 language = enUS
 
@@ -38,21 +40,29 @@ text_color = 255,255,255
 ; colors for player pointer (inner/outer)
 player_inner_color = 255,128,128
 player_outer_color = 51,255,255
-; guide line color
+; color for guide lines
 line_color = 204,204,204
-; colors for waypoint/portal/chest/quest/well
+; colors for waypoints/portals/chests/quests/wells
 waypoint_color = 153,153,255
 portal_color = 255,255,102
 chest_color = 255,102,102
 quest_color = 102,102,255
 shrine_color = 255,51,178
 well_color = 51,51,255
+; colors for monsters/unique monsters(including champions)/npcs
+monster_color = 255,0,0
+unique_monster_color = 192,166,130
+npc_color = 160,160,160
+; message list background color
+msg_bg_color = 1,1,1
 ; show player names
 show_player_names = 1
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
 ; show in-memory nearby monsters
 show_monsters = 1
+; show in-memory nearby items on ground, check D2RMH_item.ini for filter settings
+show_items = 1
 ; show normal monsters
 ;  0 - only NPCs/super-uniques/bosses/champions are shown
 ;  1 - common monsters and minions are also shown
