Work in progress
* add DISCLAIMER section to README
* show player's town portal and permanent portal by shrine now, and change default color to light yellow

--- a/bin/D2RMH_data.ini
+++ b/bin/D2RMH_data.ini
@@ -142,6 +142,8 @@
 2=Shrine|Shrine
 26=Quest|Gibbet
 30=Quest|Inifuss
+59=Portal|Portal
+60=Portal|Portal
 61=Quest|StoneAlpha
 77=Shrine|Shrine
 81=Shrine|Shrine
@@ -6418,6 +6420,19 @@ PoisonSpinner[9]=毒吐き蜘蛛
 PoisonSpinner[10]=[ms]Tece-veneno
 PoisonSpinner[11]=Ядовитый ткач
 PoisonSpinner[12]=剧毒缠丝蛛
+Portal[0]=Portal to 
+Portal[1]=傳送到
+Portal[2]=Portal nach 
+Portal[3]=Portal a
+Portal[4]=Portail vers
+Portal[5]=Portale verso
+Portal[6]=차원문: 
+Portal[7]=Portal:
+Portal[8]=Portal hacia 
+Portal[9]=ポータル: 
+Portal[10]=Portal para 
+Portal[11]=Портал: 
+Portal[12]=传送门至
 PreservedDead[0]=Preserved Dead
 PreservedDead[1]=長存木乃伊
 PreservedDead[2]=Erhaltener Toter
