--- a/bin/gendata.ini
+++ b/bin/gendata.ini
@@ -81,6 +81,7 @@ guide[Worldstone Keep Level 3][Throne of Destruction]       =1
 2=Shrine
 10=Quest                 ;Gibbet of Cairn
 12=Quest                 ;Tree of Inifuss
+15=Portal                ;Player's Portal, or Permanent Portal by shrines
 21=Quest                 ;Malus
 22=Well,well
 23=Waypoint
