--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -47,6 +47,8 @@ chest_color = 255,102,102
 quest_color = 102,102,255
 shrine_color = 255,51,178
 well_color = 51,51,255
+; show player names
+show_player_names = 1
 ; show in-memory nearby objects(currently only shrines)
 show_objects = 1
 ; show in-memory nearby monsters
