--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,10 @@ name: CMake
 on:
   push:
     branches: [ master ]
-    paths: [ CMakeLists.txt, src, d2mapapi, common, tools, json, inih ]
+    paths: [ CMakeLists.txt, 'src/**', 'd2mapapi/**', 'common/**', 'tools/**', 'json/**', 'inih/**' ]
   pull_request:
     branches: [ master ]
-    paths: [ CMakeLists.txt, src, d2mapapi, common, tools, json, inih ]
+    paths: [ CMakeLists.txt, 'src/**', 'd2mapapi/**', 'common/**', 'tools/**', 'json/**', 'inih/**' ]
 
 env:
   BUILD_TYPE: Release
