Work in progress
* add `msg_position` to config ini for message list position
* fix a bug of items not filtered

--- a/bin/D2RMH.ini
+++ b/bin/D2RMH.ini
@@ -55,6 +55,10 @@ unique_monster_color = 192,166,130
 npc_color = 160,160,160
 ; message list background color
 msg_bg_color = 1,1,1
+; message position (x,y,align)
+; range of x and is [0.0,1.0], align can be 0(left), 1(centered), 2(right)
+msg_position = 0.95,0.25,2
+
 ; show player names
 show_player_names = 1
 ; show in-memory nearby objects(currently only shrines)
